# lstr

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/workflows/: ci.yml  docs.yml  publish-aur.yml  publish-scoop.yml  publish-winget.yml  release.yml
docs/baseline-outputs/: README.md  basic-tree.txt  depth-2-dirs-first.txt  depth-2-natural-sort.txt  depth-2-with-flags.txt  depth-2.txt
scripts/: test-dual-mode.sh  validate-basic.sh
src/: app.rs  color.rs  git.rs  main.rs  sort.rs  tui.rs  utils.rs  view.rs
tests/: cli.rs
wix/: main.wxs
