[package]
name = "lstr"
version = "0.3.0"
authors = ["Brandon Greenwell <greenwell.brandon@gmail.com>"]
edition = "2021"
rust-version = "1.88"
description = "A blazingly fast, minimalist directory tree viewer, written in Rust."
license = "MIT" 
readme = "README.md"
homepage = "https://github.com/bgreenwell/lstr" 
repository = "https://github.com/bgreenwell/lstr" 
keywords = ["ls", "tree", "filesystem", "command-line"]
categories = ["command-line-utilities", "filesystem"]
# Keep the crates.io package lean: test fixtures, demo assets, CI config,
# and development docs/scripts are repo-only.
exclude = ["examples/", "assets/", ".github/", "docs/", "scripts/"]

[dependencies]
anyhow = "1.0"
colored = "3.1"
clap = { version = "4.6", features = ["derive"] }
git2 = { version = "0.21", default-features = false }
ignore = "0.4.22"
lscolors = "0.21"
url = "2.5.2"
ratatui = "0.30"
natord = "1.0"
serde_json = "1.0"

# Dependencies for testing the command-line interface
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[workspace]
# Exclude the examples directory from being treated as a workspace member
exclude = ["examples/sample-directory"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Profile used by cargo-dist for release binaries
[profile.dist]
inherits = "release"
lto = "thin"

# cargo-release configuration
[package.metadata.release]
pre-release-replacements = [
  { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}", exactly = 1 },
]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"

# cargo-aur configuration for Arch Linux
[package.metadata.aur]
depends = []
makedepends = ["cargo"]

# WiX configuration for MSI installer
[package.metadata.wix]
upgrade-guid = "48365D07-B7D6-42D3-8B41-61290CA8CDFF"
path-guid = "C0D381F3-1D38-461F-B73B-29FF253C21AD"
license = false
eula = false
